# cache_diff

./: CHANGELOG.md  Cargo.toml  LICENSE.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
cache_diff/: Cargo.toml  LICENSE.txt  README.md
cache_diff/src/: lib.rs
cache_diff/tests/fails/: accidental_custom_field.stderr  duplicate_field.stderr  generic_missing_bounds.stderr  missing_custom.stderr  missing_display.stderr
cache_diff_derive/: Cargo.toml
cache_diff_derive/src/: attributes.rs  cache_diff_container.rs  cache_diff_field.rs  fields.rs  lib.rs  parse_container.rs  parse_field.rs  shared.rs
usage/: Cargo.toml
usage/src/: main.rs  multiple_structs.rs
usage/tests/fails/: accidental_custom_field.rs  accidental_custom_field.stderr  generic_missing_bounds.rs  generic_missing_bounds.stderr  missing_custom.rs  missing_custom.stderr  missing_display.stderr
usage/tests/pass/: custom_with_serde_attribute.rs  struct_with_generics.rs
