[workspace]
resolver = "2"
members = [
    "usage",
    "cache_diff",
    "cache_diff_derive",
]

[workspace.package]
version = "1.0.1"
rust-version = "1.82"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/heroku-buildpacks/cache_diff"
documentation = "https://docs.rs/cache_diff"
